--- a/styles/main.css
+++ b/styles/main.css
@@ -7241,3 +7241,32 @@ a.credit {
 .section {
   padding-bottom: 0;
 }
+
+.pulse-blob {
+  /*background: black;*/
+  /*border-radius: 50%;*/
+  /*margin: 10px;*/
+  /*height: 20px;*/
+  /*width: 20px;*/
+
+  box-shadow: 0 0 0 0 rgba(55, 140, 53, 1);
+  transform: scale(1);
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(55, 140, 53, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(55, 140, 53, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba55, 140, 53, 0);
+  }
+}
